Large espHome refactor

--- a/esphome/common/switches/restart.yaml
+++ b/esphome/common/switches/restart.yaml
@@ -1,4 +1,5 @@
 # The restart switch platform allows you to restart your node remotely through Home Assistant.
 # https://esphome.io/components/switch/restart.html
-platform  : restart
-name      : "${devicelocation} Restart"
+platform: restart
+id: switch_restart
+name: "${name} Restart"
