--- a/esphome/common/sensors/wifi_signal.yaml
+++ b/esphome/common/sensors/wifi_signal.yaml
@@ -1,5 +1,6 @@
 # The wifi_signal sensor platform allows you to read the signal strength of the currently connected WiFi Access Point.
 # https://esphome.io/components/sensor/wifi_signal.html
-platform        : wifi_signal
-name            : "${devicelocation} WiFi Signal"
-update_interval : 300s
+platform: wifi_signal
+id: sensor_wifi_signal
+name: "${name} WiFi Signal"
+update_interval: 300s
