--- a/esphome/common/text_sensors/version.yaml
+++ b/esphome/common/text_sensors/version.yaml
@@ -1,4 +1,5 @@
 # The version text sensor platform exposes the ESPHome version the firmware was compiled against as a text sensor.
 # https://esphome.io/components/text_sensor/version.html
-platform  : version
-name      : "${devicelocation} Version"
+platform: version
+id: text_sensor_version
+name: "${name} Version"
