add entity_category to hide entity from main dash

--- a/esphome/devices/shelly_detached_output.yaml
+++ b/esphome/devices/shelly_detached_output.yaml
@@ -56,6 +56,7 @@ switch:
   - platform: output
     id: switch_output
     name: "${name} Light Power"
+    entity_category: config
     output: relay_output
 
 output:
