Not in use, not usefull

--- a/entities/proximities/home_stefan.yaml
+++ b/entities/proximities/home_stefan.yaml
@@ -1,4 +1,4 @@
-home_stefan:
-  devices            : person.stefan
-  tolerance          : 10
-  unit_of_measurement: m
+#home_stefan:
+#  devices            : person.stefan
+#  tolerance          : 10
+#  unit_of_measurement: m
