--- a/entities/sensors/statistics.yaml
+++ b/entities/sensors/statistics.yaml
@@ -1,11 +1,22 @@
-- platform    : statistics
-  name        : living_room_temperature_stats
-  entity_id   : sensor.living_room_tempsensor_temperature
+- platform: statistics
+  name: living_room_temperature_stats
+  entity_id: sensor.living_room_tempsensor_temperature
+  state_characteristic: mean
   max_age:
-    hours     : 24
+    hours: 24
 
-- platform    : statistics
-  name        : bathroom_humidity_stats
-  entity_id   : sensor.bathroom_tempsensor_humidity
+- platform: statistics
+  name: "Bathroom humidity mean over last 24 hours"
+  entity_id: sensor.bathroom_tempsensor_humidity
+  state_characteristic: mean
   max_age:
-    hours     : 24
+    hours: 24
+
+- platform: statistics
+  name: "Bathroom humidity change over 5 minutes"
+  entity_id: sensor.bathroom_tempsensor_humidity
+  state_characteristic: change
+  max_age:
+    minutes: 5
+  sampling_size: 50
+  precision: 1
