Entity name change

--- a/automations/002 utility closet/doorbell_pauze_chromecast.yaml
+++ b/automations/002 utility closet/doorbell_pauze_chromecast.yaml
@@ -14,4 +14,4 @@
     - "{{ is_state_attr('remote.roelofs_harmony_hub', 'current_activity', 'Chromecast/Netflix') }}"
   action:
     - service   : media_player.media_pause
-      entity_id : media_player.woonkamer
+      entity_id : media_player.televisie
