--- a/automations/003 living room/harmony_start_activity_on_cast.yaml
+++ b/automations/003 living room/harmony_start_activity_on_cast.yaml
@@ -6,7 +6,7 @@
   description   : Set the correct activity on Harmony remote when you start casting to Woonkamer.
   trigger:
     - platform  : state
-      entity_id : media_player.woonkamer
+      entity_id : media_player.televisie
       to        : 'playing'
   condition:
     condition   : not
