--- a/automations/003 living room/multimedia_movie_playing_chromecast.yaml
+++ b/automations/003 living room/multimedia_movie_playing_chromecast.yaml
@@ -3,7 +3,7 @@
   description   : Dim the living room lights when a movie starts playing at night
   trigger:
     - platform  : state
-      entity_id : media_player.woonkamer
+      entity_id : media_player.televisie
       to        : 'playing'
   condition:
     # Only dim the lights late at night.
@@ -12,12 +12,12 @@
       before    : "02:00:00"
     # Only dim the lights when a movie is playing - type can be: movie (netflix), music (spotify), none (Youtube)
     - condition : state
-      entity_id : media_player.woonkamer
+      entity_id : media_player.televisie
       attribute : media_content_type
       state     : 'movie'
     # Only dim the lights when the movie is longer than 0,5 hour.
     - condition : numeric_state
-      entity_id : media_player.woonkamer
+      entity_id : media_player.televisie
       attribute : media_duration
       above     : 1800
   action:
