--- a/entities/utility_meters/energy_yearly_peak.yaml
+++ b/entities/utility_meters/energy_yearly_peak.yaml
@@ -1,4 +1,4 @@
 energy_yearly_peak:
-  source : sensor.energy_consumption_tarif_2
-  name   : Energy Total (Peak)
-  cron   : '0 0 16 3 *' # Yearly at 16-03
+  source: sensor.energy_consumption_tarif_2
+  name: Energy Yearly (Peak)
+  cron: "0 0 16 3 *" # Yearly at 16-03
