--- a/automations/202 laundry room/mechanical_ventilation.yaml
+++ b/automations/202 laundry room/mechanical_ventilation.yaml
@@ -1,71 +1,80 @@
-- alias         : laundry_room_mechanical_ventilation
-  id            : 2975023b-791e-480f-a803-064d369830c0
-  mode          : single
-  max_exceeded  : silent
+- alias: laundry_room_mechanical_ventilation
+  id: 2975023b-791e-480f-a803-064d369830c0
+  mode: single
+  max_exceeded: silent
   trigger:
-    - platform  : homeassistant
-      event     : start
-    - platform  : event
+    - platform: homeassistant
+      event: start
+      id: ha_start
+    - platform: event
       event_type: automation_reloaded
-    - platform  : state
+    - platform: state
       entity_id:
         - binary_sensor.anybody_home
-    - platform  : state
-      entity_id : binary_sensor.bathroom_hygrostat
-      from      : 'off'
-      to        : 'on'
-    - platform  : state
-      entity_id : binary_sensor.bathroom_hygrostat
-      from      : 'on'
-      to        : 'off'
-    - platform  : time
+    - platform: state
+      entity_id: binary_sensor.bathroom_hygrostat
+      from: "off"
+      to: "on"
+    - platform: state
+      entity_id: binary_sensor.bathroom_hygrostat
+      from: "on"
+      to: "off"
+    - platform: time
       at:
         - "00:00:00"
         - "08:00:00"
   action:
-    choose:
+    - alias: Check if this is triggered by HA restart
+      choose:
+        - conditions:
+            condition: trigger
+            id: ha_start
+          sequence:
+            - delay:
+                minutes: 1
 
-      # Turn the fan off if nobody is home.
-      - conditions:
-          - condition   : state
-            entity_id   : binary_sensor.anybody_home
-            state       : 'off' # nobody is home
-        sequence:
-          - service     : fan.turn_off
-            target:
-              entity_id : fan.mech_vent_fan
+    - alias: Turn the fan off if nobody is home.
+      choose:
+        - conditions:
+            - condition: state
+              entity_id: binary_sensor.anybody_home
+              state: "off" # nobody is home
+          sequence:
+            - service: fan.turn_off
+              target:
+                entity_id: fan.mech_vent_fan
 
-      # Set fan to High when someone is showering, but only during the daytime.
-      - conditions:
-          - condition   : state
-            entity_id   : binary_sensor.bathroom_hygrostat
-            state       : 'on' # high humidity detected
-          - condition   : time
-            after       : "07:00:00"
-            before      : "00:00:00"
-        sequence:
-          - service     : fan.turn_on
-            target:
-              entity_id : fan.mech_vent_fan
-            data:
-              percentage: 80 # %
+        # Set fan to High when someone is showering, but only during the daytime.
+        - conditions:
+            - condition: state
+              entity_id: binary_sensor.bathroom_hygrostat
+              state: "on" # high humidity detected
+            - condition: time
+              after: "07:00:00"
+              before: "00:00:00"
+          sequence:
+            - service: fan.turn_on
+              target:
+                entity_id: fan.mech_vent_fan
+              data:
+                percentage: 80 # %
 
-      # Set fan to medium at night. Everybody is breathing in their beds.
-      - conditions:
-          - condition   : time
-            after       : "00:00:00"
-            before      : "08:00:00"
-        sequence:
-          - service     : fan.turn_on
-            target:
-              entity_id : fan.mech_vent_fan
-            data:
-              percentage: 45 # %
-  
-    # Set fan to low during the day
-    default:
-      - service         : fan.turn_on
-        target:
-          entity_id     : fan.mech_vent_fan
-        data:
-          percentage    : 25 # %
+        # Set fan to medium at night. Everybody is breathing in their beds.
+        - conditions:
+            - condition: time
+              after: "00:00:00"
+              before: "08:00:00"
+          sequence:
+            - service: fan.turn_on
+              target:
+                entity_id: fan.mech_vent_fan
+              data:
+                percentage: 45 # %
+
+      # Set fan to low during the day
+      default:
+        - service: fan.turn_on
+          target:
+            entity_id: fan.mech_vent_fan
+          data:
+            percentage: 25 # %
