--- a/entities/sensors/scrape.yaml
+++ b/entities/sensors/scrape.yaml
@@ -7,6 +7,7 @@
   value_template: '{{ value | regex_replace(find="%", replace="", ignorecase=False) | regex_replace(find=",", replace=".", ignorecase=False) | float(default=0.0) }}'
   scan_interval:
     hours: 1
+  state_class: measurement
 
 # Goto url: https://try.jsoup.org
 # Press button: Fetch url, and paste the resource url.
