--- a/automations/300 outside/christmas_lights.yaml
+++ b/automations/300 outside/christmas_lights.yaml
@@ -1,43 +1,54 @@
-- alias         : outside_christmas_lights
-  id            : 9c93a7e9-ea9d-401a-b88f-2ceef305f743
-  mode          : queued
+- alias: outside_christmas_lights
+  id: 9c93a7e9-ea9d-401a-b88f-2ceef305f743
+  mode: queued
   trigger:
-#    - platform  : homeassistant
-#      event     : start  # in case the states aren't properly restored
-    - platform  : event
+    - platform: homeassistant
+      event: start # in case the states aren't properly restored
+      id: ha_start
+    - platform: event
       event_type: automation_reloaded # in case automations reload
-    - platform  : time
+    - platform: time
       at:
-        - "07:30:00"      # Turn on light in the morning
-        - "00:00:05"      # Turn off light a couple seconds after midnight
-    - platform  : sun     # Turn off light half hour after sunrise
-      event     : sunrise
-      offset    : "00:30:00"
-    - platform  : sun     # Turn on light half hour before sunset
-      event     : sunset
-      offset    : "-00:30:00"
+        - "07:30:00" # Turn on light in the morning
+        - "00:00:05" # Turn off light a couple seconds after midnight
+    - platform: sun # Turn off light half hour after sunrise
+      event: sunrise
+      offset: "00:30:00"
+    - platform: sun # Turn on light half hour before sunset
+      event: sunset
+      offset: "-00:30:00"
+
   condition:
-    - condition : state
-      entity_id : input_boolean.christmas_time
-      state     : 'on'
+    - condition: state
+      entity_id: input_boolean.christmas_time
+      state: "on"
+
   action:
+    - alias: Check if this is triggered by HA restart
+      choose:
+        - conditions:
+            condition: trigger
+            id: ha_start
+          sequence:
+            - delay:
+                minutes: 2
     - choose:
         - conditions:
-            condition       : or
+            condition: or
             conditions:
-              - condition   : time        # Condition to turn on in the morning
-                after       : "07:25:00"
-                before      : "08:35:00"
-              - condition   : sun         # Condition to turn on in the evening
-                after       : sunset
+              - condition: time # Condition to turn on in the morning
+                after: "07:25:00"
+                before: "08:35:00"
+              - condition: sun # Condition to turn on in the evening
+                after: sunset
                 after_offset: "-00:45:00"
           sequence:
-            - service       : light.turn_on
-              entity_id     : light.inside
-            - service       : light.turn_on
-              entity_id     : light.outside                                     # christmas light string in hedge
+            #            - service: light.turn_on
+            #              entity_id: light.inside
+            - service: light.turn_on
+              entity_id: light.outside # christmas light string in hedge
       default:
-        - service           : light.turn_off
-          entity_id         : light.inside
-        - service           : light.turn_off
-          entity_id         : light.outside                                     # christmas light string in hedge
+        #        - service: light.turn_off
+        #          entity_id: light.inside
+        - service: light.turn_off
+          entity_id: light.outside # christmas light string in hedge
